// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown should render Markdown in a p tag even for one paragraph 1`] = `

<p class="rsg--para-0">
  pizza
</p>

`;

exports[`Markdown should render Markdown in span in inline mode 1`] = `

<span class="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16">
  Hello
  <em class="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16 rsg--em-18">
    world
  </em>
  !
</span>

`;

exports[`Markdown should render Markdown with custom CSS classes 1`] = `

<div>
  <div class="rsg--spacing-3">
    <h1 class="rsg--heading-4 rsg--heading1-5">
      Header
    </h1>
  </div>
  <p class="rsg--para-0">
    Text with
    <em class="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16 rsg--em-18">
      some
    </em>
    <strong class="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16 rsg--strong-19">
      formatting
    </strong>
    and a
    <a href="/foo"
       class="rsg--link-2"
    >
      link
    </a>
    .
  </p>
  <p class="rsg--para-0">
    <img alt="Image"
         src="/bar.png"
    >
  </p>
</div>

`;

exports[`Markdown should render a blockquote 1`] = `

<blockquote class="rsg--blockquote-27">
  <p class="rsg--para-0">
    This is a blockquote.
And this is a second line.
  </p>
</blockquote>

`;

exports[`Markdown should render a horizontal rule 1`] = `

<hr class="rsg--hr-28">

`;

exports[`Markdown should render a table 1`] = `

<table class="rsg--table-29">
  <thead class="rsg--thead-30">
    <tr>
      <th class="rsg--th-32 rsg--td-31">
        heading 1
      </th>
      <th class="rsg--th-32 rsg--td-31">
        heading 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="rsg--td-31">
        foo
      </td>
      <td class="rsg--td-31">
        bar
      </td>
    </tr>
    <tr>
      <td class="rsg--td-31">
        more foo
      </td>
      <td class="rsg--td-31">
        more bar
      </td>
    </tr>
  </tbody>
</table>

`;

exports[`Markdown should render check-lists correctly 1`] = `

<ul class="rsg--list-21">
  <li class="rsg--li-23">
    <input type="checkbox"
           readonly
           class="rsg--input-24"
    >
    list 1
  </li>
  <li class="rsg--li-23">
    <input type="checkbox"
           readonly
           class="rsg--input-24"
    >
    list 2
  </li>
  <li class="rsg--li-23">
    <input type="checkbox"
           checked
           readonly
           class="rsg--input-24"
    >
    list 3
  </li>
</ul>

`;

exports[`Markdown should render code blocks without escaping 1`] = `

<pre class="rsg--pre-25">
  <code class="lang-html rsg--code-26">
    <foo>
    </foo>
  </code>
</pre>

`;

exports[`Markdown should render headings correctly 1`] = `

<div>
  <div class="rsg--spacing-3">
    <h1 class="rsg--heading-4 rsg--heading1-5">
      one
    </h1>
  </div>
  <div class="rsg--spacing-3">
    <h2 class="rsg--heading-4 rsg--heading2-6">
      two
    </h2>
  </div>
  <div class="rsg--spacing-3">
    <h3 class="rsg--heading-4 rsg--heading3-7">
      three
    </h3>
  </div>
  <div class="rsg--spacing-3">
    <h4 class="rsg--heading-4 rsg--heading4-8">
      four
    </h4>
  </div>
  <div class="rsg--spacing-3">
    <h5 class="rsg--heading-4 rsg--heading5-9">
      five
    </h5>
  </div>
  <div class="rsg--spacing-3">
    <h6 class="rsg--heading-4 rsg--heading6-10">
      six
    </h6>
  </div>
</div>

`;

exports[`Markdown should render inline code with escaping 1`] = `

<p class="rsg--para-0">
  Foo
  <code class="rsg--code-26">
    &lt;bar&gt;
  </code>
  baz
</p>

`;

exports[`Markdown should render links 1`] = `

<p class="rsg--para-0">
  a
  <a href="http://test.com"
     class="rsg--link-2"
  >
    link
  </a>
</p>

`;

exports[`Markdown should render mixed nested lists correctly 1`] = `

<ul class="rsg--list-21">
  <li class="rsg--li-23">
    list 1
  </li>
  <li class="rsg--li-23">
    list 2
    <ol class="rsg--list-21 rsg--ordered-22">
      <li class="rsg--li-23">
        Sub-list
      </li>
      <li class="rsg--li-23">
        Sub-list
      </li>
      <li class="rsg--li-23">
        Sub-list
      </li>
    </ol>
  </li>
  <li class="rsg--li-23">
    list 3
  </li>
</ul>

`;

exports[`Markdown should render ordered lists correctly 1`] = `

<ol class="rsg--list-21 rsg--ordered-22">
  <li class="rsg--li-23">
    list
  </li>
  <li class="rsg--li-23">
    item
  </li>
  <li class="rsg--li-23">
    three
  </li>
</ol>

`;

exports[`Markdown should render unordered lists correctly 1`] = `

<ul class="rsg--list-21">
  <li class="rsg--li-23">
    list
  </li>
  <li class="rsg--li-23">
    item
  </li>
  <li class="rsg--li-23">
    three
  </li>
</ul>

`;
